Mon Mar 15 10:47:18 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilechooserentry.c: s/seperator/separator/.

Mon Mar 15 09:54:36 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_focus): Check for 
	Control-Tab or Control-Shift-Tab, not any Control-key
	as a current event ... handles the case where a dialog
	is triggered from a control accelerator better.

Mon Mar 15 08:48:48 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserentry.c (match_selected_callback): implement
	correctly.
	(completion_match_func): Allow surpressing popdowns.
	(maybe_append_seperator_to_path): New function to add a separator
	item to a display_name.  Bad hack.
	(check_completion_callback): Implement select-ahead as an idle.
	(add_completion_idle): new function to handle select-ahead
	(gtk_file_chooser_entry_do_insert_text): starf the select-ahead
	idle.
	(gtk_file_chooser_entry_focus): Override tab for completion.
	(gtk_file_chooser_entry_activate): commit select_ahead when
	activated.

	* gtk/gtkfilechooserdefault.c (location_popup_handler): grab the
	appropriate widget for the mode.

2004-03-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkgc-win32.c (gdk_gc_copy): Don't just copy the whole
	GdkGCWin32 with a single assignment, that overwrites GObject's
	private data (for instance ref_count). (#137012, John Ehresman)

2004-03-15  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkfilechooserdefault.c: remove the unused "lowest_folder"
	GtkFileChooserDefault member. Leftover from my original patch
	for bug #136987.

Mon Mar 15 01:50:28 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtkfilechooserentry.c: Rewritten to use the GtkEntryCompletion
	API more correctly.  Now pops down the dropdown well.

	* gtkfilesystem.c (gtk_file_path_get_type): New boxed type for the
	FilePath.

	* test/testfilechooser.c: disable preview widget temporarily.
	It's not representative of a good preview widget.

2004-03-15  Federico Mena Quintero  <federico@ximian.com>
